exports[`mcfunction argument parser > minecraft:angle > Parse \"0\" 1`] = `
{
  "node": {
    "type": "mcfunction:coordinate",
    "notation": "",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": 0
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:angle > Parse \"^\" 1`] = `
{
  "node": {
    "type": "mcfunction:coordinate",
    "notation": "^",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": 0
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 1
      },
      "message": "Local coordinates disallowed",
      "severity": 3
    }
  ]
}
`;

exports[`mcfunction argument parser > minecraft:angle > Parse \"~-0.5\" 1`] = `
{
  "node": {
    "type": "mcfunction:coordinate",
    "notation": "~",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": -0.5
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > minecraft:angle > Parse \"~\" 1`] = `
{
  "node": {
    "type": "mcfunction:coordinate",
    "notation": "~",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": 0
  },
  "errors": []
}
`;
